--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
-    "name": "base-jekyll",
-    "version": "1.0.0",
-    "description": "",
-    "main": "gulpfile.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/tonik/base-jekyll.git"
-    },
-    "author": "Tonik",
-    "license": "ISC",
-    "devDependencies": {
-        "gulp": "^3.9.1",
-        "gulp-autoprefixer": "^3.1.1",
-        "gulp-clean-css": "^3.0.3",
-        "gulp-concat": "^2.6.1",
-        "gulp-run": "^1.7.1",
-        "gulp-sass": "^3.1.0",
-        "gulp-sourcemaps": "^2.4.1",
-        "gulp-uglify": "^2.1.0"
-    },
-    "bugs": {
-        "url": "https://github.com/tonik/base-jekyll/issues"
-    },
-    "homepage": "https://github.com/tonik/base-jekyll#readme"
+  "name": "jekyll-blog",
+  "version": "1.0.0",
+  "description": "",
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tonik/base-jekyll.git"
+  },
+  "author": "Tonik",
+  "license": "ISC",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^3.0.3",
+    "gulp-concat": "^2.6.1",
+    "gulp-run": "^1.7.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-uglify": "^2.1.0"
+  }
 }
